infra/cdk.out/VirtualPowerPlantStack.template.json
{
 "Resources": {
  "Vpc8378EB38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VirtualPowerPlantStack/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/Resource"
   }
  },
  "VpcPublicSubnet1Subnet5C2D37C4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "dummy1a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VirtualPowerPlantStack/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PublicSubnet1/Subnet"
   }
  },
  "VpcPublicSubnet1RouteTable6C95E38E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VirtualPowerPlantStack/Vpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PublicSubnet1/RouteTable"
   }
  },
  "VpcPublicSubnet1RouteTableAssociation97140677": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "VpcPublicSubnet1DefaultRoute3DA9E72A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcPublicSubnet1RouteTable6C95E38E"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PublicSubnet1/DefaultRoute"
   }
  },
  "VpcPublicSubnet1EIPD7E02669": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VirtualPowerPlantStack/Vpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PublicSubnet1/EIP"
   }
  },
  "VpcPublicSubnet1NATGateway4D7517AA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcPublicSubnet1EIPD7E02669",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet1Subnet5C2D37C4"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VirtualPowerPlantStack/Vpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "VpcPublicSubnet1DefaultRoute3DA9E72A",
    "VpcPublicSubnet1RouteTableAssociation97140677"
   ],
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PublicSubnet1/NATGateway"
   }
  },
  "VpcPublicSubnet2Subnet691E08A3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "dummy1b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VirtualPowerPlantStack/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PublicSubnet2/Subnet"
   }
  },
  "VpcPublicSubnet2RouteTable94F7E489": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VirtualPowerPlantStack/Vpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PublicSubnet2/RouteTable"
   }
  },
  "VpcPublicSubnet2RouteTableAssociationDD5762D8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPublicSubnet2RouteTable94F7E489"
    },
    "SubnetId": {
     "Ref": "VpcPublicSubnet2Subnet691E08A3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "VpcPublicSubnet2DefaultRoute97F91067": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "RouteTableId": {
     "Ref": "VpcPublicSubnet2RouteTable94F7E489"
    }
   },
   "DependsOn": [
    "VpcVPCGWBF912B6E"
   ],
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PublicSubnet2/DefaultRoute"
   }
  },
  "VpcPrivateSubnet1Subnet536B997A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "dummy1a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VirtualPowerPlantStack/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PrivateSubnet1/Subnet"
   }
  },
  "VpcPrivateSubnet1RouteTableB2C5B500": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VirtualPowerPlantStack/Vpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PrivateSubnet1/RouteTable"
   }
  },
  "VpcPrivateSubnet1RouteTableAssociation70C59FA6": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
    },
    "SubnetId": {
     "Ref": "VpcPrivateSubnet1Subnet536B997A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "VpcPrivateSubnet1DefaultRouteBE02A9ED": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
    },
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet1RouteTableB2C5B500"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "VpcPrivateSubnet2Subnet3788AAA1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "dummy1b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VirtualPowerPlantStack/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PrivateSubnet2/Subnet"
   }
  },
  "VpcPrivateSubnet2RouteTableA678073B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VirtualPowerPlantStack/Vpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PrivateSubnet2/RouteTable"
   }
  },
  "VpcPrivateSubnet2RouteTableAssociationA89CAD56": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet2RouteTableA678073B"
    },
    "SubnetId": {
     "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "VpcPrivateSubnet2DefaultRoute060D2087": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcPublicSubnet1NATGateway4D7517AA"
    },
    "RouteTableId": {
     "Ref": "VpcPrivateSubnet2RouteTableA678073B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "VpcIGWD7BA715C": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VirtualPowerPlantStack/Vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/IGW"
   }
  },
  "VpcVPCGWBF912B6E": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGWD7BA715C"
    },
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Vpc/VPCGW"
   }
  },
  "ClusterEB0386A7": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/Cluster/Resource"
   }
  },
  "ClickHouseClusterSubnetsE85477E1": {
   "Type": "AWS::Redshift::ClusterSubnetGroup",
   "Properties": {
    "Description": "Subnets for ClickHouseCluster Redshift cluster",
    "SubnetIds": [
     {
      "Ref": "VpcPrivateSubnet1Subnet536B997A"
     },
     {
      "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/ClickHouseCluster/Subnets/Default"
   }
  },
  "ClickHouseClusterSecurityGroup44F2FC3F": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Redshift security group",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/ClickHouseCluster/SecurityGroup/Resource"
   }
  },
  "ClickHouseClusterSecretC2E5B153": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "GenerateSecretString": {
     "ExcludeCharacters": "\"@/\\ '",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"clickhouse_admin\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/ClickHouseCluster/Secret/Resource"
   }
  },
  "ClickHouseClusterSecretAttachment5DF046BC": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "ClickHouseClusterSecretC2E5B153"
    },
    "TargetId": {
     "Ref": "ClickHouseCluster6C6D09C2"
    },
    "TargetType": "AWS::Redshift::Cluster"
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/ClickHouseCluster/Secret/Attachment/Resource"
   }
  },
  "ClickHouseCluster6C6D09C2": {
   "Type": "AWS::Redshift::Cluster",
   "Properties": {
    "AllowVersionUpgrade": true,
    "AutomatedSnapshotRetentionPeriod": 1,
    "ClusterSubnetGroupName": {
     "Ref": "ClickHouseClusterSubnetsE85477E1"
    },
    "ClusterType": "multi-node",
    "DBName": "default_db",
    "Encrypted": true,
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "ClickHouseClusterSecretC2E5B153"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "ClickHouseClusterSecretC2E5B153"
       },
       ":SecretString:username::}}"
      ]
     ]
    },
    "NodeType": "ra3.xlplus",
    "NumberOfNodes": 2,
    "PubliclyAccessible": false,
    "VpcSecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "ClickHouseClusterSecurityGroup44F2FC3F",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/ClickHouseCluster/Resource"
   }
  },
  "DbSecret685A0FA5": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "GenerateSecretString": {}
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/DbSecret/Resource"
   }
  },
  "DbSecretAttachment0609CE05": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "DbSecret685A0FA5"
    },
    "TargetId": {
     "Ref": "NeonInstance31E13C37"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/DbSecret/Attachment/Resource"
   }
  },
  "NeonInstanceSubnetGroupB9B22BF7": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for NeonInstance database",
    "SubnetIds": [
     {
      "Ref": "VpcPrivateSubnet1Subnet536B997A"
     },
     {
      "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/NeonInstance/SubnetGroup/Default"
   }
  },
  "NeonInstanceSecurityGroup401C8A32": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for NeonInstance database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/NeonInstance/SecurityGroup/Resource"
   }
  },
  "NeonInstanceSecurityGroupfromVirtualPowerPlantStackNeonProxyProxySecurityGroupD63AB983IndirectPort4673495B": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow connections to the database Instance from the Proxy",
    "FromPort": {
     "Fn::GetAtt": [
      "NeonInstance31E13C37",
      "Endpoint.Port"
     ]
    },
    "GroupId": {
     "Fn::GetAtt": [
      "NeonInstanceSecurityGroup401C8A32",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "NeonProxyProxySecurityGroup5FF30C27",
      "GroupId"
     ]
    },
    "ToPort": {
     "Fn::GetAtt": [
      "NeonInstance31E13C37",
      "Endpoint.Port"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/NeonInstance/SecurityGroup/from VirtualPowerPlantStackNeonProxyProxySecurityGroupD63AB983:{IndirectPort}"
   }
  },
  "NeonInstance31E13C37": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "100",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBSubnetGroupName": {
     "Ref": "NeonInstanceSubnetGroupB9B22BF7"
    },
    "Engine": "postgres",
    "EngineVersion": "15",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DbSecret685A0FA5"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "DbSecret685A0FA5"
       },
       ":SecretString:username::}}"
      ]
     ]
    },
    "PubliclyAccessible": false,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "NeonInstanceSecurityGroup401C8A32",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Snapshot",
   "DeletionPolicy": "Snapshot",
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/NeonInstance/Resource"
   }
  },
  "NeonProxyIAMRole88513320": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "rds.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/NeonProxy/IAMRole/Resource"
   }
  },
  "NeonProxyIAMRoleDefaultPolicy9795CFD1": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "secretsmanager:GetSecretValue",
        "secretsmanager:DescribeSecret"
       ],
       "Effect": "Allow",
       "Resource": {
        "Ref": "DbSecret685A0FA5"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "NeonProxyIAMRoleDefaultPolicy9795CFD1",
    "Roles": [
     {
      "Ref": "NeonProxyIAMRole88513320"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/NeonProxy/IAMRole/DefaultPolicy/Resource"
   }
  },
  "NeonProxyProxySecurityGroup5FF30C27": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "SecurityGroup for Database Proxy",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/NeonProxy/ProxySecurityGroup/Resource"
   }
  },
  "NeonProxyED3F4800": {
   "Type": "AWS::RDS::DBProxy",
   "Properties": {
    "Auth": [
     {
      "AuthScheme": "SECRETS",
      "IAMAuth": "REQUIRED",
      "SecretArn": {
       "Ref": "DbSecret685A0FA5"
      }
     }
    ],
    "DBProxyName": "NeonProxy",
    "EngineFamily": "POSTGRESQL",
    "RequireTLS": true,
    "RoleArn": {
     "Fn::GetAtt": [
      "NeonProxyIAMRole88513320",
      "Arn"
     ]
    },
    "VpcSecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "NeonProxyProxySecurityGroup5FF30C27",
       "GroupId"
      ]
     }
    ],
    "VpcSubnetIds": [
     {
      "Ref": "VpcPrivateSubnet1Subnet536B997A"
     },
     {
      "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/NeonProxy/Resource"
   }
  },
  "NeonProxyProxyTargetGroupB02BA524": {
   "Type": "AWS::RDS::DBProxyTargetGroup",
   "Properties": {
    "ConnectionPoolConfigurationInfo": {},
    "DBInstanceIdentifiers": [
     {
      "Ref": "NeonInstance31E13C37"
     }
    ],
    "DBProxyName": {
     "Ref": "NeonProxyED3F4800"
    },
    "TargetGroupName": "default"
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/NeonProxy/ProxyTargetGroup"
   }
  },
  "DataProcessorServiceRoleCF9E1CFC": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "VpcPrivateSubnet1DefaultRouteBE02A9ED",
    "VpcPrivateSubnet1RouteTableAssociation70C59FA6",
    "VpcPrivateSubnet2DefaultRoute060D2087",
    "VpcPrivateSubnet2RouteTableAssociationA89CAD56"
   ],
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/DataProcessor/ServiceRole/Resource"
   }
  },
  "DataProcessorServiceRoleDefaultPolicy5F9C43B3": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "rds-db:connect",
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":rds-db:us-east-1:607856384745:dbuser:",
          {
           "Fn::Select": [
            6,
            {
             "Fn::Split": [
              ":",
              {
               "Fn::GetAtt": [
                "NeonProxyED3F4800",
                "DBProxyArn"
               ]
              }
             ]
            }
           ]
          },
          "/{{resolve:secretsmanager:",
          {
           "Ref": "DbSecret685A0FA5"
          },
          ":SecretString:username::}}"
         ]
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "DataProcessorServiceRoleDefaultPolicy5F9C43B3",
    "Roles": [
     {
      "Ref": "DataProcessorServiceRoleCF9E1CFC"
     }
    ]
   },
   "DependsOn": [
    "VpcPrivateSubnet1DefaultRouteBE02A9ED",
    "VpcPrivateSubnet1RouteTableAssociation70C59FA6",
    "VpcPrivateSubnet2DefaultRoute060D2087",
    "VpcPrivateSubnet2RouteTableAssociationA89CAD56"
   ],
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/DataProcessor/ServiceRole/DefaultPolicy/Resource"
   }
  },
  "DataProcessorSecurityGroup9399B4A9": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatic security group for Lambda Function VirtualPowerPlantStackDataProcessor3B643FB4",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "DependsOn": [
    "VpcPrivateSubnet1DefaultRouteBE02A9ED",
    "VpcPrivateSubnet1RouteTableAssociation70C59FA6",
    "VpcPrivateSubnet2DefaultRoute060D2087",
    "VpcPrivateSubnet2RouteTableAssociationA89CAD56"
   ],
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/DataProcessor/SecurityGroup/Resource"
   }
  },
  "DataProcessorEEF8FB1B": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-607856384745-us-east-1",
     "S3Key": "ba294e6f76efe809b8e56fec79051b4b5205e774e7c61e17a33e955630599b5a.zip"
    },
    "Environment": {
     "Variables": {
      "NEON_PROXY_ENDPOINT": {
       "Fn::GetAtt": [
        "NeonProxyED3F4800",
        "Endpoint"
       ]
      },
      "CLICKHOUSE_ENDPOINT": {
       "Fn::GetAtt": [
        "ClickHouseCluster6C6D09C2",
        "Endpoint.Address"
       ]
      }
     }
    },
    "Handler": "index.handler",
    "Role": {
     "Fn::GetAtt": [
      "DataProcessorServiceRoleCF9E1CFC",
      "Arn"
     ]
    },
    "Runtime": "python3.12",
    "VpcConfig": {
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "DataProcessorSecurityGroup9399B4A9",
        "GroupId"
       ]
      }
     ],
     "SubnetIds": [
      {
       "Ref": "VpcPrivateSubnet1Subnet536B997A"
      },
      {
       "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
      }
     ]
    }
   },
   "DependsOn": [
    "DataProcessorServiceRoleDefaultPolicy5F9C43B3",
    "DataProcessorServiceRoleCF9E1CFC",
    "VpcPrivateSubnet1DefaultRouteBE02A9ED",
    "VpcPrivateSubnet1RouteTableAssociation70C59FA6",
    "VpcPrivateSubnet2DefaultRoute060D2087",
    "VpcPrivateSubnet2RouteTableAssociationA89CAD56"
   ],
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/DataProcessor/Resource",
    "aws:asset:path": "asset.ba294e6f76efe809b8e56fec79051b4b5205e774e7c61e17a33e955630599b5a",
    "aws:asset:is-bundled": false,
    "aws:asset:property": "Code"
   }
  },
  "PowerReadingsBusE6D227EC": {
   "Type": "AWS::Events::EventBus",
   "Properties": {
    "Name": "VirtualPowerPlantStackPowerReadingsBus959B6439"
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/PowerReadingsBus/Resource"
   }
  },
  "EventDLQ3FA25A8E": {
   "Type": "AWS::SQS::Queue",
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/EventDLQ/Resource"
   }
  },
  "EventDLQPolicyC1B2A8E4": {
   "Type": "AWS::SQS::QueuePolicy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "sqs:SendMessage",
       "Condition": {
        "ArnEquals": {
         "aws:SourceArn": {
          "Fn::GetAtt": [
           "ProcessReadingsRule0BE7D8DB",
           "Arn"
          ]
         }
        }
       },
       "Effect": "Allow",
       "Principal": {
        "Service": "events.amazonaws.com"
       },
       "Resource": {
        "Fn::GetAtt": [
         "EventDLQ3FA25A8E",
         "Arn"
        ]
       },
       "Sid": "AllowEventRuleVirtualPowerPlantStackProcessReadingsRuleE043CA41"
      }
     ],
     "Version": "2012-10-17"
    },
    "Queues": [
     {
      "Ref": "EventDLQ3FA25A8E"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/EventDLQ/Policy/Resource"
   }
  },
  "ProcessReadingsRule0BE7D8DB": {
   "Type": "AWS::Events::Rule",
   "Properties": {
    "EventBusName": {
     "Ref": "PowerReadingsBusE6D227EC"
    },
    "EventPattern": {
     "source": [
      "iot.power"
     ]
    },
    "State": "ENABLED",
    "Targets": [
     {
      "Arn": {
       "Fn::GetAtt": [
        "DataProcessorEEF8FB1B",
        "Arn"
       ]
      },
      "DeadLetterConfig": {
       "Arn": {
        "Fn::GetAtt": [
         "EventDLQ3FA25A8E",
         "Arn"
        ]
       }
      },
      "Id": "Target0",
      "RetryPolicy": {
       "MaximumRetryAttempts": 3
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/ProcessReadingsRule/Resource"
   }
  },
  "ProcessReadingsRuleAllowEventRuleVirtualPowerPlantStackDataProcessor3B643FB4C0B9C357": {
   "Type": "AWS::Lambda::Permission",
   "Properties": {
    "Action": "lambda:InvokeFunction",
    "FunctionName": {
     "Fn::GetAtt": [
      "DataProcessorEEF8FB1B",
      "Arn"
     ]
    },
    "Principal": "events.amazonaws.com",
    "SourceArn": {
     "Fn::GetAtt": [
      "ProcessReadingsRule0BE7D8DB",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/ProcessReadingsRule/AllowEventRuleVirtualPowerPlantStackDataProcessor3B643FB4"
   }
  },
  "ApiTaskTaskRoleD15A20E9": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/ApiTask/TaskRole/Resource"
   }
  },
  "ApiTask011D0955": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Cpu": 256,
      "Essential": true,
      "Image": "amazon/amazon-ecs-sample",
      "Memory": 512,
      "Name": "AppContainer"
     }
    ],
    "Cpu": "256",
    "Family": "VirtualPowerPlantStackApiTask769DE1D2",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ApiTaskTaskRoleD15A20E9",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/ApiTask/Resource"
   }
  },
  "ApiServiceC9037CF0": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "ClusterEB0386A7"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 2,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ApiServiceSecurityGroupA2426F91",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "VpcPrivateSubnet1Subnet536B997A"
       },
       {
        "Ref": "VpcPrivateSubnet2Subnet3788AAA1"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "ApiTask011D0955"
    }
   },
   "DependsOn": [
    "ApiTaskTaskRoleD15A20E9"
   ],
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/ApiService/Service"
   }
  },
  "ApiServiceSecurityGroupA2426F91": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "VirtualPowerPlantStack/ApiService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "Vpc8378EB38"
    }
   },
   "DependsOn": [
    "ApiTaskTaskRoleD15A20E9"
   ],
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/ApiService/SecurityGroup/Resource"
   }
  },
  "AlertsTopic3414BE91": {
   "Type": "AWS::SNS::Topic",
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/AlertsTopic/Resource"
   }
  },
  "AlertsQueue4709902F": {
   "Type": "AWS::SQS::Queue",
   "Properties": {
    "VisibilityTimeout": 300
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/AlertsQueue/Resource"
   }
  },
  "AlertsQueuePolicyC51ADAD1": {
   "Type": "AWS::SQS::QueuePolicy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "sqs:SendMessage",
       "Condition": {
        "ArnEquals": {
         "aws:SourceArn": {
          "Ref": "AlertsTopic3414BE91"
         }
        }
       },
       "Effect": "Allow",
       "Principal": {
        "Service": "sns.amazonaws.com"
       },
       "Resource": {
        "Fn::GetAtt": [
         "AlertsQueue4709902F",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Queues": [
     {
      "Ref": "AlertsQueue4709902F"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/AlertsQueue/Policy/Resource"
   }
  },
  "AlertsQueueVirtualPowerPlantStackAlertsTopic59ADC45B4F459D7E": {
   "Type": "AWS::SNS::Subscription",
   "Properties": {
    "Endpoint": {
     "Fn::GetAtt": [
      "AlertsQueue4709902F",
      "Arn"
     ]
    },
    "Protocol": "sqs",
    "TopicArn": {
     "Ref": "AlertsTopic3414BE91"
    }
   },
   "DependsOn": [
    "AlertsQueuePolicyC51ADAD1"
   ],
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/AlertsQueue/VirtualPowerPlantStackAlertsTopic59ADC45B/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31TTW/iMBD9LdyNS6m0e10+2orLKktQr9XEDMElsVnPGBZF/u+r2AlBIPWS9+Z5Jn4ej6dyOvkhm8kIzjRW28O40oVscgZ1EHCmzwbVVDYfRyUWO/ORLUTmi0qr3BcGudUGtraecQNFhYM+aDMiqzSwtuaa3JLXVdbCb+B3YDzDRWROn4Bx+PHKMDqD14TkpItmzKD2NRoWOSrvNF/enfXH6OFbYWVKh0RBoCLZLCpPjK7N6ukbuBJa+3RY4k4b3Zu/V6xh0AbdjdbV5uhOWqWGJBqEwy3t9Y5lM+yVDnv12alBECqHTDUYKNHFijxKIsEGXIl804NrwsNKkoNwW5LNEhgKIFwZYjAKxZ2B5fxBuKb2tZmz/y5p7Z6mzWNxEBpq2axtGouIma20ivmJBUEvn0CETHLWgqAXOffqgDwHQlFBXWwhnv7NG9VfQ4au1kTamiDwh [...]
   },
   "Metadata": {
    "aws:cdk:path": "VirtualPowerPlantStack/CDKMetadata/Default"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
